--- a/index.html
+++ b/index.html
@@ -87,6 +87,12 @@
                     <div class="category-breakdown" id="categoryBreakdown">
                         <!-- Categorie breakdown wordt hier toegevoegd -->
                     </div>
+                    <div class="question-review" id="questionReview">
+                        <h3>Vraag voor Vraag Review</h3>
+                        <div id="questionReviewList">
+                            <!-- Individuele vragen worden hier toegevoegd -->
+                        </div>
+                    </div>
                     <button id="restartQuizButton" class="btn btn-primary">Nieuwe Quiz Starten</button>
                 </div>
             </div>
