--- a/index.html
+++ b/index.html
@@ -18,6 +18,24 @@
         </header>
 
         <main>
+            <div class="user-selection-section" id="quizSelectionSection" style="display: block;">
+                <div class="user-selection-content">
+                    <h2>Kies je quiz</h2>
+                    <p class="user-selection-subtitle">Selecteer welke quiz je wilt doen</p>
+                    <div class="user-options quiz-options">
+                        <div class="user-option quiz-option" data-quiz="quiz1">
+                            <div class="user-name">Quiz 1</div>
+                        </div>
+                        <div class="user-option quiz-option" data-quiz="quiz2">
+                            <div class="user-name">Quiz 2</div>
+                        </div>
+                        <div class="user-option quiz-option" data-quiz="python">
+                            <div class="user-name">Python</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
             <div class="user-selection-section" id="userSelectionSection">
                 <div class="user-selection-content">
                     <h2>Kies je gebruiker</h2>
@@ -60,7 +78,12 @@
                 <div class="answers-section" id="answersSection">
                     <!-- Antwoorden worden hier dynamisch toegevoegd -->
                 </div>
-                
+
+                <div class="navigation-section" id="navigationSection">
+                    <button id="nextButton" class="btn btn-primary" style="display: none;">Volgende Vraag</button>
+                    <button id="restartButton" class="btn btn-secondary" style="display: none;">Opnieuw Beginnen</button>
+                </div>
+
                 <div class="feedback-section" id="feedbackSection" style="display: none;">
                     <div class="feedback-content">
                         <div class="feedback-icon" id="feedbackIcon"></div>
@@ -69,10 +92,6 @@
                     </div>
                 </div>
                 
-                <div class="navigation-section">
-                    <button id="nextButton" class="btn btn-primary" style="display: none;">Volgende Vraag</button>
-                    <button id="restartButton" class="btn btn-secondary" style="display: none;">Opnieuw Beginnen</button>
-                </div>
             </div>
 
             <div class="results-section" id="resultsSection" style="display: none;">
@@ -100,6 +119,8 @@
     </div>
 
     <script src="firebase-config.js"></script>
+    <script src="quiz2.js"></script>
+    <script src="quiz_python.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
